	* drivers/usbhost -- Add generic USB device enumeration logic.
	* drivers/usbhost -- Add a USB host class driver for the (Bulk-Only) USB
	  Mass Storage Class.

5.17 2011-01-19 Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/usb -- rename usb_storage.h to storage.h.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Add support for low-speed devices.
	* drivers/usbhost/usbhost_skeleton.c -- Template for new class drivers
	* include/nuttx/usb/hid.h and drivers/usbhost/usbhost_hidkbd.c -- New
	  files for HID keyboard support.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Will now handle multiple
	  concurrent transfers on different endpoints (still only one TD per
	  endpoint).  All methods are protected from re-entrancy; lots of re-
	  structuring in preparation for interrupt endpoint support.
	* arch/arm/src/lpc17xx/lpc17_usbhost.c -- Add support for periodic
	  interrupt transfers.
	* examples/hidkbd - Added a simple test for the USB host HID keyboard
	  class driver.
	* configs/olimex-lpc1766stk/hidkbd - Added a configuration to build the
	  USB host HID keyboard class driver test for the LPC17xx.
	* Ran the tool CppCheck (http://sourceforge.net/apps/mediawiki/cppcheck) and
	  fixed several errors in the code identified by the tool.

5.18 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Incorporate several uIP patches from http://gitweb.aeruder.net/?p=uip.git;a=summary.
	  - Lost SYNACK causes connection reset
	  - Fix missing UDP stats for sent/received packets
	  - Added support for Cygwin as development/test platform.
	* configs/demo9s12ne64 - Integrate new buildroot-1.9 m8s12x toolchain.
	* 'uname -o' is used throughout the build logic in bash scripts and also in
	  Make.defs files in order to distinguish between Cygwin and Linux.  However,
	  the -o option is not standard and is not supported under, for example, OS-X or
	  Solaris.  This was solved by changing all 'uname -o' references to the more
	  complex:  'uname -o 2>/dev/null || echo "Other"'